--- a/src/app/pages/feature/showfeature/showfeature.page.html
+++ b/src/app/pages/feature/showfeature/showfeature.page.html
@@ -36,7 +36,7 @@
         <ion-button (click)="chatService.openChat({ conversationId: moment.conversation, moment: moment, subpanel: this.platform.width() >= 768 })" *ngIf="!subpanel && !relationshipId && !calendarItem && moment && moment.array_boolean && (moment.array_boolean.length >= 5) && moment.array_boolean[5]" color="grey"> <!--hide if subpanel or if content calendar and participant group chat is turned off-->
           <ion-icon name="chatbubbles"></ion-icon>
         </ion-button>
-        <ion-button (click)="inviteToJoin()" [hidden]="subpanel || relationshipId && calendarItem && moment && moment.array_boolean && (moment.array_boolean.length <= 9 || !moment.array_boolean[9])" color="grey"> <!--hide if subpanel or if content calendar and show Content Edit Controls to Users-->
+        <ion-button id="add-user-to-group" (click)="inviteToJoin()" [hidden]="subpanel || relationshipId && calendarItem && moment && moment.array_boolean && (moment.array_boolean.length <= 9 || !moment.array_boolean[9])" color="grey"> <!--hide if subpanel or if content calendar and show Content Edit Controls to Users-->
           <ion-icon name="person-add"></ion-icon>
         </ion-button>
         <ion-button (click)="router.navigate([{ outlets: { sub: null }}], { replaceUrl: true })" [hidden]="!subpanel" color="grey"> <!--close subpanel-->
