--- a/src/app/pages/feature/manage/feature-insight/feature-insight.page.html
+++ b/src/app/pages/feature/manage/feature-insight/feature-insight.page.html
@@ -12,7 +12,7 @@
     <ion-select interface="action-sheet" slot="end" placeholder="see options" (ionChange)="onClickMe($event)">
       <!-- 30 days, 90 days, this year, last year -->
       <ion-select-option value=30>30 days</ion-select-option>
-      <ion-select-option>90 days</ion-select-option>
+      <ion-select-option value=90>90 days</ion-select-option>
       <ion-select-option>This Year</ion-select-option>
       <ion-select-option>Last Year</ion-select-option>
     </ion-select>
