--- a/src/app/pages/feature/manage/feature-insight/feature-insight.page.html
+++ b/src/app/pages/feature/manage/feature-insight/feature-insight.page.html
@@ -3,17 +3,17 @@
     <ion-buttons slot="start">
       <ion-button (click)="closeModal()" color="grey"><ion-icon name="chevron-back-outline"></ion-icon></ion-button>
     </ion-buttons>
-    <ion-title (click)="onClickMe()">Insight</ion-title>
+    <ion-title>Insight</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <ion-toolbar *ngIf="['owner','admin','staff'].includes(userData.user.role)">
-    <ion-select interface="action-sheet" slot="end" placeholder="see options" (ionChange)="onClickMe($event)">
+    <ion-select interface="action-sheet" slot="end" placeholder="see options" (ionChange)="loadMetrics(30)">
       <!-- 30 days, 90 days, this year, last year -->
       <ion-select-option value=30>30 days</ion-select-option>
       <ion-select-option value=90>90 days</ion-select-option>
-      <ion-select-option>This Year</ion-select-option>
+      <ion-select-option value=365>This Year</ion-select-option>
       <ion-select-option>Last Year</ion-select-option>
     </ion-select>
     <ngx-charts-line-chart
