--- a/src/app/pages/feature/manage/feature-insight/feature-insight.page.html
+++ b/src/app/pages/feature/manage/feature-insight/feature-insight.page.html
@@ -9,12 +9,13 @@
 
 <ion-content>
   <ion-toolbar *ngIf="['owner','admin','staff'].includes(userData.user.role)">
-    <ion-select interface="action-sheet" slot="end" placeholder="see options" (ionChange)="loadMetrics(30)">
+    <ion-select interface="action-sheet" slot="end" placeholder="see options" (ionChange)="loadMetrics($event.target.value)">
       <!-- 30 days, 90 days, this year, last year -->
+      <ion-select-option value=7>7 days</ion-select-option>
       <ion-select-option value=30>30 days</ion-select-option>
       <ion-select-option value=90>90 days</ion-select-option>
       <ion-select-option value=365>This Year</ion-select-option>
-      <ion-select-option>Last Year</ion-select-option>
+      <ion-select-option>Last Year (n/a yet)</ion-select-option>
     </ion-select>
     <ngx-charts-line-chart
             [scheme]="colorScheme"
