--- a/src/app/pages/feature/pickpeople-popover/pickpeople-popover.page.html
+++ b/src/app/pages/feature/pickpeople-popover/pickpeople-popover.page.html
@@ -31,7 +31,7 @@
       <ion-icon slot="end" color="tertiary" *ngIf="this.selfConversationObj.select" name="checkmark-circle"></ion-icon>
     </ion-item>
     <ion-virtual-scroll [items]="conversations" approxItemHeight="60px">
-      <div id="user-select" *virtualItem="let obj">
+      <div [id]="obj.data.name == 'Ted Ho' ? 'user-select' : ''" *virtualItem="let obj">
         <ion-item (click)="selectFriend(obj)" *ngIf="(filter === 'connect' || filter === 'both') && (obj.conversation.type === 'connect')">
           <ion-avatar slot="start">
             <ion-img *ngIf="obj.data.participant.avatar" [src]="obj.data.participant.avatar"></ion-img>
