--- a/src/app/pages/feature/manage/feature-insight/feature-insight.page.html
+++ b/src/app/pages/feature/manage/feature-insight/feature-insight.page.html
@@ -11,9 +11,10 @@
   <ion-toolbar *ngIf="['owner','admin','staff'].includes(userData.user.role)">
     <ion-select interface="action-sheet" slot="end" placeholder="see options" (ionChange)="loadMetrics($event.target.value)">
       <!-- 30 days, 90 days, this year, last year -->
-      <ion-select-option value=7>7 days</ion-select-option>
-      <ion-select-option value=30>30 days</ion-select-option>
-      <ion-select-option value=90>90 days</ion-select-option>
+      <ion-select-option value=7>This Week</ion-select-option>
+      <ion-select-option value=30>This Month</ion-select-option>
+      <ion-select-option value=30>30 Days</ion-select-option>
+      <ion-select-option value=90>90 Days</ion-select-option>
       <ion-select-option value=365>This Year</ion-select-option>
       <ion-select-option>Last Year (n/a yet)</ion-select-option>
     </ion-select>
