--- a/src/app/pages/feature/pickpeople-popover/pickpeople-popover.page.html
+++ b/src/app/pages/feature/pickpeople-popover/pickpeople-popover.page.html
@@ -21,7 +21,7 @@
 <ion-content>
   <ion-list>
     <ion-list-header *ngIf="hasOrganizerAccess">Friends</ion-list-header>
-    <ion-item (click)="selectFriend(this.selfConversationObj)" *ngIf="selfConversationObj && includeSelf && (userData.user.first_name + ' ' + userData.user.last_name).toLowerCase().includes(searchKeyword.toLowerCase())">
+    <ion-item id="user-select" (click)="selectFriend(this.selfConversationObj)" *ngIf="selfConversationObj && includeSelf && (userData.user.first_name + ' ' + userData.user.last_name).toLowerCase().includes(searchKeyword.toLowerCase())">
       <ion-avatar slot="start">
         <ion-img *ngIf="userData.user.avatar" [src]="userData.user.avatar"></ion-img>
         <ion-img *ngIf="!userData.user.avatar" src="assets/img/avatar-default.jpg"></ion-img>
@@ -31,7 +31,7 @@
       <ion-icon slot="end" color="tertiary" *ngIf="this.selfConversationObj.select" name="checkmark-circle"></ion-icon>
     </ion-item>
     <ion-virtual-scroll [items]="conversations" approxItemHeight="60px">
-      <div [id]="obj.data.name == 'Ted Ho' ? 'user-select' : ''" *virtualItem="let obj">
+      <div *virtualItem="let obj">
         <ion-item (click)="selectFriend(obj)" *ngIf="(filter === 'connect' || filter === 'both') && (obj.conversation.type === 'connect')">
           <ion-avatar slot="start">
             <ion-img *ngIf="obj.data.participant.avatar" [src]="obj.data.participant.avatar"></ion-img>
