--- a/src/app/pages/user/register/register.page.html
+++ b/src/app/pages/user/register/register.page.html
@@ -42,12 +42,12 @@
                 <ion-input id="phone_number" class="phone_number" type="tel" formControlName="phone_number" placeholder="Mobile Number"></ion-input>
               </ion-item>
               <ion-item [hidden]="recovery_mode" lines="full">
-                <ion-input id="password" class="password" (key.enter) = "login()" placeholder="Password" formControlName="password" [type]="passwordType"></ion-input>
+                <ion-input id="password" class="password" (keyup.enter)="login()" placeholder="Password" formControlName="password" [type]="passwordType"></ion-input>
                 <ion-icon slot="end" [name]="passwordIcon" class="password-icon" (click)='hideShowPassword()'></ion-icon>
               </ion-item>
             </ion-list>
             <div>
-              <p class="ion-padding-horizontal" color="red" *ngIf="loginStatus">{{loginStatus}}</p>
+              <p class="ion-padding-horizontal" *ngIf="loginStatus">{{loginStatus}}</p>
             </div>
             <ion-button expand="block" shape="round" *ngIf="!recovery_mode" (click)="login()" color="primary" id="login-button">Login</ion-button>
             <ion-button expand="block" shape="round" *ngIf="recovery_mode && loginMode === 'mobile'" (click)="recover()" color="primary">Send Recovery Code</ion-button>
