add editfeature class

--- a/src/app/pages/feature/editparticipants/editparticipants.page.html
+++ b/src/app/pages/feature/editparticipants/editparticipants.page.html
@@ -15,7 +15,7 @@
       </ion-row>
     </ion-grid>
     <ion-buttons slot="end">
-      <ion-button (click)="inviteSelect.open($event)" color="grey">
+      <ion-button (click)="inviteSelect.open($event)" color="grey" id="add-people">
         <ion-icon name="person-add"></ion-icon>
       </ion-button>
     </ion-buttons>
