--- a/src/app/pages/user/register/register.page.html
+++ b/src/app/pages/user/register/register.page.html
@@ -33,16 +33,16 @@
                 </ion-segment-button>
               </ion-segment>
               <ion-item *ngIf="loginMode === 'email'" lines="full">
-                <ion-input id="email" class="email" type="email" formControlName="email" placeholder="Email"></ion-input>
+                <ion-input id="email" class="email" type="email" formControlName="email" placeholder="Email" inputmode="email" enterkeyhint="next" autocomplete="username"></ion-input>
               </ion-item>
               <ion-item *ngIf="loginMode === 'mobile'" lines="full">
                 <ion-select [interfaceOptions]="{cssClass: 'level-15'}" class="calling_code" formControlName="calling_code" name="Country Calling Code" value="+1">
                   <ion-select-option *ngFor="let calling_code of calling_codes" [value]="calling_code.value">{{calling_code.name}}</ion-select-option>
                 </ion-select>
-                <ion-input id="phone_number" class="phone_number" type="tel" formControlName="phone_number" placeholder="Mobile Number"></ion-input>
+                <ion-input id="phone_number" class="phone_number" type="tel" formControlName="phone_number" placeholder="Mobile Number" autocomplete="username"></ion-input>
               </ion-item>
               <ion-item [hidden]="recovery_mode" lines="full">
-                <ion-input id="password" class="password" (keyup.enter)="login()" placeholder="Password" formControlName="password" [type]="passwordType"></ion-input>
+                <ion-input id="password" class="password" (keyup.enter)="login()" placeholder="Password" formControlName="password" [type]="passwordType" inputmode="text" enterkeyhint="enter" autocomplete="current-password"></ion-input>
                 <ion-icon slot="end" [name]="passwordIcon" class="password-icon" (click)='hideShowPassword()'></ion-icon>
               </ion-item>
             </ion-list>
@@ -165,8 +165,8 @@
                     <div *ngIf="loginMode === 'email'" lines="none">
                       <form [formGroup]="nameForm">
                         <ion-item lines="full">
-                          <ion-input id="firstName" type="text" formControlName="first_name" placeholder="First Name" autocapitalize="on"></ion-input>
-                          <ion-input id="lastName" type="text" formControlName="last_name" placeholder="Last Name" autocapitalize="on"></ion-input>
+                          <ion-input id="firstName" type="text" formControlName="first_name" placeholder="First Name" autocapitalize="on" autocomplete="given-name"></ion-input>
+                          <ion-input id="lastName" type="text" formControlName="last_name" placeholder="Last Name" autocapitalize="on" autocomplete="family-name"></ion-input>
                         </ion-item>
 
                         <div *ngIf="!nameForm.controls.first_name.pristine && !nameForm.controls.first_name.valid">
@@ -302,7 +302,7 @@
                         </ion-button>
                       </ion-buttons>
                       <ion-item lines="full">
-                        <ion-input type="text" inputmode="numeric" pattern="[0-9]*" formControlName="verification_code" plcaeholder="6-digit Verification Code" maxlength="6"></ion-input>
+                        <ion-input type="text" inputmode="numeric" pattern="[0-9]*" formControlName="verification_code" placeholder="6-digit Verification Code" autocomplete="one-time-code" maxlength="6"></ion-input>
                       </ion-item>
                         <div class="form-error" *ngIf="!verifyCodeForm.controls.verification_code.pristine && !verifyCodeForm.controls.verification_code.valid">
                           Invalid code.
@@ -467,10 +467,10 @@
                         </ion-button>
                       </ion-buttons>
                       <ion-item lines="full">
-                        <ion-select [interfaceOptions]="{cssClass: 'level-15'}" class="calling_code" formControlName="mobile_calling_code" name='Country Calling Code'>
+                        <ion-select [interfaceOptions]="{cssClass: 'level-15'}" class="calling_code" formControlName="mobile_calling_code">
                           <ion-select-option *ngFor="let calling_code of calling_codes" [value]="calling_code.value">{{calling_code.name}}</ion-select-option>
                         </ion-select>
-                        <ion-input class="phone_number" type="tel" pattern="[0-9]{4,}$" formControlName="mobile_sig_number" placeholder="Mobile Number"></ion-input>
+                        <ion-input class="phone_number" type="tel" pattern="[0-9]{4,}$" formControlName="mobile_sig_number" placeholder="Mobile Number" autocomplete="tel"></ion-input>
                       </ion-item>
                       <div class="form-error" *ngIf="!mobileForm.controls.mobile_sig_number.pristine && !mobileForm.controls.mobile_sig_number.valid">
                         Invalid mobile number.
