--- a/src/app/pages/feature/manage/feature-insight/feature-insight.page.html
+++ b/src/app/pages/feature/manage/feature-insight/feature-insight.page.html
@@ -28,11 +28,11 @@
         <ion-select interface="action-sheet" slot="end" placeholder="see options"
           (ionChange)="loadMetrics($event.target.value)">
           <!-- 30 days, 90 days, this year, last year -->
-          <ion-select-option value=7>This Week</ion-select-option>
-          <ion-select-option value=30>This Month</ion-select-option>
+          <ion-select-option value=thisWeek>This Week</ion-select-option>
+          <ion-select-option value=thisMonth>This Month</ion-select-option>
           <ion-select-option value=30>30 Days</ion-select-option>
           <ion-select-option value=90>90 Days</ion-select-option>
-          <ion-select-option value=365>This Year</ion-select-option>
+          <ion-select-option value=thisYear>This Year</ion-select-option>
           <ion-select-option>Last Year (n/a yet)</ion-select-option>
         </ion-select>
   </ion-toolbar>
